--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div>
+        <img src="./foto para o trabalho.jpg" alt="imagem do criador da pagina de links, Lucas Nunes ">
         <h1>Lucas Nunes</h1>
+        <p>São Paulo, Brasil</p>
     </div>
 </body>
 </html>
