termino do desenvolvimento do Html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <img src="./foto para o trabalho.jpg" alt="imagem do criador da pagina de links, Lucas Nunes ">
         <h1>Lucas Nunes</h1>
         <p>São Paulo, Brasil</p>
+
+        <p>"Desenvolvedor front-end viciado em leitura"</p>
+
+        <a href="https://github.com/Lucasantos11BTI/meus-links">GitHub</a>
+        <a href="https://www.instagram.com/lucas.___.nunes/">Instagram</a>
+        <a href="https://twitter.com/lucasnbds">Twitter</a>
+        <a href="https://www.facebook.com/profile.php?id=100091268212472">Fecebook</a>
+        <a href="https://discord.com/channels/@me">Discord</a>
     </div>
 </body>
 </html>
