--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
         <img src="./foto para o trabalho.jpg" alt="imagem do criador da pagina de links, Lucas Nunes ">
         <h1>Lucas Nunes</h1>
-        <p>São Paulo, Brasil</p>
+        <strong>São Paulo, Brasil</strong>
 
         <p>"Desenvolvedor front-end viciado em leitura"</p>
 
