adicionando o atributo target para as ancoras. Projeto finalizado

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
         <p>"Desenvolvedor front-end viciado em leitura"</p>
 
-        <a href="https://github.com/Lucasantos11BTI/meus-links">GitHub</a>
-        <a href="https://www.instagram.com/lucas.___.nunes/">Instagram</a>
-        <a href="https://twitter.com/lucasnbds">Twitter</a>
-        <a href="https://www.facebook.com/profile.php?id=100091268212472">Fecebook</a>
-        <a href="https://discord.com/channels/@me">Discord</a>
+        <a href="https://github.com/Lucasantos11BTI/meus-links"target="_blank">GitHub</a>
+        <a href="https://www.instagram.com/lucas.___.nunes/"target="_blank">Instagram</a>
+        <a href="https://twitter.com/lucasnbds"target="_blank">Twitter</a>
+        <a href="https://www.facebook.com/profile.php?id=100091268212472"target="_blank">Fecebook</a>
+        <a href="https://discord.com/channels/@me"target="_blank">Discord</a>
     </div>
 </body>
 </html>
